<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/textCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/divide"
            android:background="@drawable/style_btn_pressed"/>

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnMulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multy"
            android:background="@drawable/style_btn_pressed"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/btnMinus"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/minus_3"
            android:scaleType="centerCrop"/>

        <ImageButton
            android:id="@+id/btnPlus"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/plus"
            android:scaleType="centerCrop"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess"
            android:background="@drawable/style_btn_pressed"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnCheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/cheat"
            android:background="@drawable/style_btn_pressed"/>

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:background="@drawable/style_btn_pressed"/>

    </LinearLayout>
</LinearLayout>

